<resources>
    <string name="app_name">Project_Budget</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="add_transaction_btn">Save Transaction</string>
    <string name="back_transaction_btn">Back</string>
    <string name="cancel_transaction_btn">Cancel</string>
    <string name="transaction_amount_label">Amount:</string>
    <string name="transaction_desc_label">Description:</string>
    <string name="transaction_date_label">Date:</string>
    <string name="transaction_notes_label">Notes:</string>
    <string name="transaction_location_label">Location:</string>

    <string name="required">Required</string>
</resources>