<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionFragment"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".AddTransactionFragment">

        <!--    <LinearLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        android:layout_marginStart="24dp"-->
        <!--        android:layout_marginTop="24dp"-->
        <!--        android:layout_marginEnd="24dp"-->
        <!--        android:layout_marginBottom="24dp"-->
        <!--        android:orientation="vertical"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent">-->


        <TextView
            android:id="@+id/tv_transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/transaction_amount_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_transaction_amount"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/transaction_location_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_transaction_amount" />

        <EditText
            android:id="@+id/et_transaction_location"
            android:layout_width="220dp"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_trasnaction_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/transaction_desc_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_trasnaction_desc"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/transaction_date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trasnaction_desc" />

        <EditText
            android:id="@+id/et_transaction_date"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="yyyy/mm/dd"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_transaction_date"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_trasnaction_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/transaction_notes_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_transaction_date" />

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="220dp"
            android:layout_height="95dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_trasnaction_notes"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_add_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_transaction_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_notes" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel_transaction_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_transaction" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>